1. code style 2. 補 setup.py 缺的內容

--- a/knowledge/static/knowledge/css/reset.css
+++ b/knowledge/static/knowledge/css/reset.css
@@ -170,7 +170,9 @@ pre {
 
 pre, code, tt {
   font: 1em 'andale mono', 'lucida console', monospace;
-  line-height: 1.5; }
+  line-height: 1.5; 
+  white-space: pre;
+}
 
 hr {
   color: #ccc;
